--- a/my-servlet-app/pom.xml
+++ b/my-servlet-app/pom.xml
@@ -1,12 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.hatim.app</groupId>
+  
+  <groupId>com.Ali.app</groupId>
   <artifactId>my-servlet-app</artifactId>
   <packaging>war</packaging>
+
   <version>1.0-SNAPSHOT</version>
   <name>my-app</name>
   <url>http://maven.apache.org</url>
+
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -14,6 +18,7 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
     <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
@@ -21,4 +26,5 @@
         <scope>provided</scope>
     </dependency>
   </dependencies>
+
 </project>
